// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.Password /> Snapshots should match with default input 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 input {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 10px;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #41414A;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #9898A6;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
      >
        <input
          class="c3 c4"
          data-testid="input"
          type="password"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      role="button"
      tabindex="0"
    >
      <svg />
    </div>
  </div>
</div>
`;

exports[`<Input.Password /> Snapshots should match with disabled input 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 320px;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
  border-color: #D3D3E2;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #D3D3E2;
}

.c1 {
  box-sizing: border-box;
  width: 320px;
}

.c4 input {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c8 {
  position: absolute;
  top: 10px;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
  cursor: not-allowed;
  pointer-events: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #41414A;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #9898A6;
  fill: #D3D3E2;
  pointer-events: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        disabled=""
        label="Label"
      >
        <input
          class="c3 c4"
          data-testid="input"
          disabled=""
          type="password"
          value=""
        />
        <label
          class="c5"
          disabled=""
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      disabled=""
      role="button"
    >
      <svg />
    </div>
  </div>
</div>
`;

exports[`<Input.Password /> Snapshots should match with full width 1`] = `
.c3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  left: 0;
  outline: none;
  width: 100%;
  -webkit-transform: translateY(-5px);
  -ms-transform: translateY(-5px);
  transform: translateY(-5px);
  border: none;
  box-sizing: border-box;
  color: #41414A;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
  height: 52px;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 16px;
}

.c3:focus-within,
.c3:focus {
  color: #41414A;
}

.c3:focus-within ~ legend,
.c3:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c3:focus-within ~ label,
.c3:focus ~ label {
  font-size: 12px;
  -webkit-transform: translateY(-14px);
  -ms-transform: translateY(-14px);
  transform: translateY(-14px);
  font-weight: 700;
  color: #41414A;
}

.c3:disabled {
  cursor: not-allowed;
  color: #D3D3E2;
}

.c3::-webkit-input-placeholder {
  color: #9898A6;
}

.c3::-moz-placeholder {
  color: #9898A6;
}

.c3:-ms-input-placeholder {
  color: #9898A6;
}

.c3::placeholder {
  color: #9898A6;
}

.c3[type="number"]::-webkit-outer-spin-button,
.c3[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c3:invalid {
  box-shadow: none;
}

.c2 {
  bottom: 0;
  height: 60px;
  margin: 0;
  padding: 0;
  position: relative;
  right: 0;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
  padding-left: 12px;
  width: 100%;
}

.c2:hover,
.c2:focus-within {
  border-color: #41414A;
}

.c6 {
  position: relative;
  padding: 0;
  max-width: 0px;
  width: auto;
  height: 14px;
  font-weight: normal;
  -webkit-transition: max-width 50ms ease 0;
  transition: max-width 50ms ease 0;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c7 {
  padding-left: 4px;
  padding-right: 4px;
}

.c5 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translateY(12px);
  -ms-transform: translateY(12px);
  transform: translateY(12px);
  left: 15px;
  font-size: 14px;
  font-weight: 400;
  color: #9898A6;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c1 {
  box-sizing: border-box;
  width: 100%;
}

.c4 input {
  padding-right: 40px;
}

.c0 {
  position: relative;
  display: inline-block;
  width: 100%;
}

.c8 {
  position: absolute;
  top: 10px;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  cursor: pointer;
  outline: none;
}

.c8:hover svg,
.c8:focus svg {
  fill: #41414A;
}

.c8 svg {
  height: 52px;
  width: 20px;
  fill: #9898A6;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class="c2"
        label="Label"
      >
        <input
          class="c3 c4"
          data-testid="input"
          type="password"
          value=""
        />
        <label
          class="c5"
        >
          Label
        </label>
        <legend
          class="c6"
        >
          <span
            class="c7"
          >
            Label
          </span>
        </legend>
      </fieldset>
    </div>
    <div
      class="c8"
      role="button"
      tabindex="0"
    >
      <svg />
    </div>
  </div>
</div>
`;
